<resources>
    <string name="app_name">AfriChat</string>
    <string name="appname">AfriChat</string>
    <string name="Contact">Contact_fragment</string>
    <string name="Group">Groups_fragment</string>
    <string name="Afric">AfriChat</string>
    <string name="transferChat">Transfer chat</string>
    <string name="screenSaverloading">loading.....</string>
    <string name="groupAfriclite">grupp AfricLite</string>
    <string name="Chat">Chat_fragment</string>
    <string name="resetEmail">Enter email</string>
    <string name="clickToReset">Reset Now</string>
    <string name="infoAboutReset">note:by clicking reset now,your password reset will commence.</string>
    <string name="weAreAfriclite">powered by AfricLite</string>
    <string name="todoo">TODO</string>
    <string name="Return">Return</string>
    <string name="add_files">Add Files</string>
    <string name="occupationUpdateButton">Update:</string>
    <string name="occupationUserName">Username:</string>
    <string name="occupationOccupation">Occupation:</string>
    <string name="occupationCountryOfOperation">Country of operation:</string>
    <string name="occupationPhoneNo">phone no:</string>
    <string name="occupationalPostOfDetailExplanation">Detail explanation of what you do or link to portfolio:</string>
    <string name="occupationalPostOfLocation">city/village/street:</string>
    <string name="typeMessageHere">type message here...</string>
    <string name="gmail">
        <a href="emmajerry2016@gmail.com">...</a>
    </string>
    <string name="powered">
        <a href="https://jerryjoetech.com/">powered by AfricLite.ng</a>
    </string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">login</string>
    <string name="login1">login</string>
    <string name="forget_password">forget password?</string>
    <string name="need_new_account">Need new Account</string>
    <string name="or_login_using_yours">or Login Using Yours</string>
    <string name="phone">phone</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="architecturing">Fixing section</string>
    <string name="find_friends">Find friends</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="string_type_your_message_here" />
    <string name="receiver">Receivers id:</string>
    <string name="text">Chat:</string>
    <string name="or_login_using_your">or_login_using_your</string>
    <string name="verify">Verify</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="verification_code_here">Verification code here:</string>
    <string name="phone_no_here">Phone no here:</string>
    <string name="enlightenment">Enlightenment</string>
    <string name="string_enlightenment" />
    <string name="user_status">user status:</string>
    <string name="user_name">user name:</string>
    <string name="showpass">Hide password</string>
    <string name="create_group">Create group</string>
    <string name="find_friends1">Find friends</string>
    <string name="search_for_specialist">Search for specialist</string>
    <string name="occupational_post">Occupational post</string>
    <string name="search_engine">Search engine</string>
    <string name="transfer_chat">Transfer chat</string>
    <string name="transfer_message">Transfer Message</string>
    <string name="chat_or_sms1">Chat or SmS:</string>
    <string name="receiver_s_no_or_username">receiver\'s no:</string>
    <string name="user_name1">User name:</string>
    <string name="hey_pain_is_everywhere">hey pain is everywhere</string>
    <string name="send_message">Send Message</string>
    <string name="cancel_chat_request">Cancel Chat Request</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="display_username">Display UserName</string>
    <string name="last_seen">Last Seen</string>
    <string name="receiver_messages_here">receiver messages here</string>
    <string name="sender_messages">sender messages</string>
    <string name="africlitee">AfriChat</string>
    <string name="back">Back</string>
    <string name="search_here">search friends here</string>
    <string name="receiver_s_no_here">receiver\'s no here</string>
    <string name="chat_or_sms_here">chat or sms here</string>
    <string name="string_chat_or_sms_here" />
    <string name="todo">TODO</string>
    <string name="type_your_message_heree">type your message here</string>
    <string name="string_type_your_message_heree">group_id</string>
</resources>
    <!--*******************Team | AfricLite*******************-->