<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/architecturing"
        android:id="@+id/architecturing_option"
        app:showAsAction="never"/>
    <item
        android:title="@string/find_friends"
        android:id="@+id/find_friends"
        app:showAsAction="never"/>

    <item
        android:title="@string/search_engine"
        android:id="@+id/search_engine"
        app:showAsAction="never"/>
    <item
        android:title="@string/transfer_chat"
        android:id="@+id/transfer_chat"
        app:showAsAction="never"/>
    <item
        android:title="@string/logout"
        android:id="@+id/logout_menu"
        app:showAsAction="never"/>

</menu>