<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mycolorlogin"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_background"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/profilee" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name1"
        android:layout_below="@id/profile_background"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/user_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:fontFamily="monospace"
        android:text="@string/hey_pain_is_everywhere"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark1"
        android:textSize="15sp" />

    <Button
        android:id="@+id/send_text_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_status"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:textColor="#ffffffff"
        android:background="@drawable/sender_messages_layout"
        android:textSize="15sp"
        android:fontFamily="sans-serif-thin"
        android:textAllCaps="false"
        android:text="@string/send_message" />

    <Button
        android:id="@+id/decline_chat_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_text_Button"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:textColor="#ffffffff"
        android:background="@drawable/sender_messages_layout"
        android:textSize="15sp"
        android:fontFamily="sans-serif-thin"
        android:textAllCaps="false"
        android:text="@string/cancel_chat_request"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/groupAfriclite"
        android:textColor="#dedede" />



</RelativeLayout>