<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mycolorlogin"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="111dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="111dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/logooo" />

        <EditText
            android:id="@+id/resetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:background="@drawable/greendesign"
            android:padding="14dp"
            android:textColor="#fff"
            android:textColorHint="#333"
            android:hint="@string/resetEmail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sender_messages_layout"
            android:text="@string/clickToReset"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="50dp"
            android:textColor="#fff"
            android:textSize="17sp"
            android:fontFamily="monospace"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoAboutReset"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#eee"
            android:textAlignment="center"
            android:textSize="15sp" />


    </LinearLayout>

</ScrollView>