<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/loginAfric"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/afric1"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/af1" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginAfric"
                android:layout_alignParentStart="true"
                android:autofillHints=""
                android:background="@drawable/inputs"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textStyle="bold"
                android:padding="5dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="17dp"
                android:layout_marginLeft="17dp" tools:targetApi="o" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_email"
                android:layout_alignParentStart="true"
                android:autofillHints=""
                android:background="@drawable/inputs"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:padding="5dp"
                android:drawableStart="@drawable/ic_lock_open_black_24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="17dp"
                android:layout_marginLeft="17dp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/forget_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="23dp"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/forget_password"
                android:textAlignment="textEnd"
                android:textColor="@android:color/background_dark"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:targetApi="o" />
            <TextView
                android:id="@+id/need_new_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="23dp"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/need_new_account"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:targetApi="o" />
            <TextView
                android:id="@+id/login_using"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/need_new_account"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="23dp"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/or_login_using_yours"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="17sp"
                android:textStyle="normal"
                tools:targetApi="o" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_link"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="19dp"
                android:background="@android:color/holo_orange_dark"
                android:padding="4dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/phone_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_using"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="19dp"
                android:background="@android:color/holo_orange_dark"
                android:drawableStart="@drawable/ic_phonelink_lock_black_24dp"
                android:padding="4dp"
                android:text="@string/phone"
                android:textAllCaps="false"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="24sp" />


        </RelativeLayout>
    </ScrollView>


