<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".PhoneActivity">


    <ImageView
        android:id="@+id/phoneLoginLogo"
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/communications"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_no_here"
        android:layout_below="@id/phoneLoginLogo"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="7dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/logoo"
        android:padding="15dp"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-thin"
        android:textSize="15sp"
        android:typeface="serif"
        android:textAlignment="center"
        android:textStyle="normal"
        android:drawableStart="@drawable/ic_phonelink_lock_black_24dp"
        android:inputType="phone"
        android:importantForAutofill="no" tools:targetApi="o" />

    <EditText
        android:id="@+id/verification_code_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verification_code_here"
        android:visibility="invisible"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="35dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/logoo"
        android:padding="15dp"
        android:layout_below="@+id/phone_number_input"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_lock_open_black_24dp"
        android:inputType=""
        android:importantForAutofill="no"
        tools:targetApi="o"
        />

    <Button
        android:id="@+id/send_veri_code_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_verification_code"
        android:textAllCaps="false"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:typeface="serif"
        android:background="@drawable/sender_messages_layout"
        android:textColor="#ffffffff"
        android:textStyle="normal"
        android:layout_below="@id/verification_code_input"
        android:textSize="17sp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/sender_messages_layout"
        android:textColor="#ffffffff"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:layout_below="@id/send_veri_code_button"
        android:textSize="17sp"
        android:textAlignment="center"
        android:visibility="invisible" />

    <Button
        android:id="@+id/back"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/verify_button"
        android:layout_alignStart="@+id/verify_button"
        android:layout_alignLeft="@+id/verify_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="202dp"
        android:layout_marginRight="202dp"
        android:background="#000"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/back"
        android:textColor="#333"
        android:textSize="17sp"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>