<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mycolorlogin"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="111dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="111dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/logooo"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_alignParentStart="true"
            android:autofillHints=""
            android:background="@drawable/logoo"
            android:hint="@string/email"
            android:fontFamily="sans-serif-thin"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:typeface="serif"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="17dp"
            android:textColorHint="#a8a8a8"
            android:layout_marginLeft="17dp"
            tools:targetApi="o"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/ic_email_black_24dp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_email"
            android:layout_alignParentStart="true"
            android:autofillHints=""
            android:background="@drawable/logoo"
            android:hint="@string/password"
            android:typeface="serif"
            android:fontFamily="sans-serif-thin"
            android:padding="10dp"
            android:textColorHint="#a8a8a8"
            android:drawableStart="@drawable/ic_lock_open_black_24dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="17dp"
            android:layout_marginLeft="17dp"
            tools:targetApi="o"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/ic_lock_open_black_24dp"
            tools:ignore="RtlHardcoded" />

        <CheckBox
            android:id="@+id/showpassreg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/showpass"/>


        <TextView
            android:id="@+id/already_have_account1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/showpassreg"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="23dp"
            android:clickable="false"
            android:focusable="false"
            android:typeface="serif"
            android:fontFamily="sans-serif-thin"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:targetApi="o"
            />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/already_have_account1"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/sender_messages_layout"
            android:padding="2dp"
            android:typeface="serif"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="17sp" />
</RelativeLayout>
</ScrollView>