<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/users_profile_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/profile"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="176dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:paddingTop="3dp"
                    android:gravity="start"
                    android:text="@string/user_name"
                    android:textAlignment="textStart"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    tools:ignore="RtlCompat" />

                <ImageView
                    android:id="@+id/user_online_status"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/Afric"
                    android:src="@drawable/online"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/user_offline_status"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/Afric"
                    android:src="@drawable/offline"
                    android:visibility="invisible" />

            </LinearLayout>


            <TextView
                android:id="@+id/user_profile_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/user_status"
                android:textAlignment="textStart"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="15sp"
                android:gravity="start"
                tools:ignore="RtlCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <Button
                    android:id="@+id/request_accept_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    android:visibility="invisible"
                    android:textColor="#ffffffff"
                    style="@android:style/ButtonBar"
                    android:fontFamily="monospace"
                    android:background="@drawable/acceptrequest"
                    android:layout_marginLeft="10dp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/request_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/btncancelreq"
                    android:text="@string/decline"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:visibility="invisible"
                    android:fontFamily="monospace"
                    android:textColor="#ffffffff"
                    style="@android:style/ButtonBar"
                    android:textSize="13sp"
                    android:layout_marginLeft="15dp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>