<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#F2F5F8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/message_profile_image"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/profile"/>

    <TextView
        android:id="@+id/receiver_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/message_profile_image"
        android:layout_toRightOf="@id/message_profile_image"
        android:background="@drawable/receivers_message_layout"
        android:fontFamily="serif"
        android:padding="10dp"
        android:text="@string/receiver_messages_here"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="normal"
        android:layout_marginStart="6dp" />

    <ImageView
        android:id="@+id/message_sender_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/Afric"
        android:layout_margin="5dp"
        android:scaleType="centerCrop"
        tools:ignore="RtlCompat" />

    <ImageView
        android:id="@+id/message_receiver_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/Afric"
        android:scaleType="centerCrop"
        tools:ignore="RtlCompat" />


    <TextView
        android:id="@+id/sender_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/sender_messages_layout"
        android:fontFamily="serif"
        android:padding="10dp"
        android:text="@string/sender_messages"
        android:textColor="#ffffffff"
        android:textSize="14sp"
        android:textStyle="normal"
        android:layout_marginEnd="6dp" />
</RelativeLayout>